# optimizing-convolution

./: .gitignore  CMakeLists.txt  LICENSE  dependencies.cuh  gamma-kernels.cu  gamma.cuh  gaussian-kernels.cu  gaussian.cuh  histogram-kernels.cu  histogram.cuh  main.cu  singlethreaded.cu
graphs/: 3rd-party.py  base-graph.py  base-kernels-graph.py  baselineFeatures.py  coarsening-graph.py  coarseningEffect.py  duration-graph.py  graphics.py  graphs.py  libraryFuncsComparement.py  profile.csv  profile1.csv  profile2.csv  profile3.csv  profiles.csv
graphs/datas/: imsize2048.csv  imsize4096.csv  imsize8192.csv
graphs/uchar/reports/: 2048.csv  4096.csv  8192.csv  all-2048-uchar.csv  all-4096-uchar.csv  all-8192-uchar.csv  base-kernels-2048-uchar.csv  base-kernels-4096-uchar.csv  base-kernels-8192-uchar.csv
include/: cuda-libs.cuh  dependencies.cuh  gamma.cuh  gaussian.cuh  histogram.cuh  kernels.cuh  opencv-libs.cuh  utils.cuh
ptx/: CM.txt  GM.txt  SM.txt
src/: gamma-kernels.cu  gaussian-kernels.cu  kernels.cu  kernels_test.cu  main.cu  multithreaded.cu
